# flashinfer-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs
docs/: flashinfer-rs-integration.md
scripts/: compile_gdn_decode_tvmffi.py
src/: error.rs  ffi.rs  fp4_quantization.rs  fused_moe.rs  gdn_prefill.rs  gemm.rs  lib.rs  mha_batch_prefill.rs  mha_batch_prefill_paged.rs  mha_decode.rs  mha_prefill.rs  mla_batch_paged.rs  norm.rs  paged_kv_append.rs  prefill.rs  runtime.rs
tests/: fused_moe_gpu.rs  gdn_prefill_gpu.rs  gdn_prefill_stress_gpu.rs  gemm_gpu.rs  gemma_rmsnorm_gpu.rs  mha_batch_prefill_gpu.rs  mha_batch_prefill_paged_gpu.rs  mha_decode_gpu.rs  paged_kv_append_gpu.rs  rmsnorm_gpu.rs
