[package]
name = "flashinfer-rs"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[package.metadata.flashinfer_rs.pinned_wheels.flashinfer_jit_cache.cu130.x86_64]
filename = "flashinfer_jit_cache-0.6.3+cu130-cp39-abi3-manylinux_2_28_x86_64.whl"
url = "https://github.com/flashinfer-ai/flashinfer/releases/download/v0.6.3/flashinfer_jit_cache-0.6.3+cu130-cp39-abi3-manylinux_2_28_x86_64.whl"
sha256 = "e5b0560aa02befa2964c76b8f9302959ed9fb2f558765b974753d68c4f8b4e1e"

[package.metadata.flashinfer_rs.pinned_wheels.flashinfer_jit_cache.cu130.aarch64]
filename = "flashinfer_jit_cache-0.6.3+cu130-cp39-abi3-manylinux_2_28_aarch64.whl"
url = "https://github.com/flashinfer-ai/flashinfer/releases/download/v0.6.3/flashinfer_jit_cache-0.6.3+cu130-cp39-abi3-manylinux_2_28_aarch64.whl"
sha256 = "458fcf5a854334062503ce28bd6521c16029d2248246532421e824e8273b8a81"

# Upstream stable currently publishes cu130 wheels for CUDA 13.x; `cu131` entries
# intentionally map to the same pinned wheel artifacts.
[package.metadata.flashinfer_rs.pinned_wheels.flashinfer_jit_cache.cu131.x86_64]
filename = "flashinfer_jit_cache-0.6.3+cu130-cp39-abi3-manylinux_2_28_x86_64.whl"
url = "https://github.com/flashinfer-ai/flashinfer/releases/download/v0.6.3/flashinfer_jit_cache-0.6.3+cu130-cp39-abi3-manylinux_2_28_x86_64.whl"
sha256 = "e5b0560aa02befa2964c76b8f9302959ed9fb2f558765b974753d68c4f8b4e1e"

[package.metadata.flashinfer_rs.pinned_wheels.flashinfer_jit_cache.cu131.aarch64]
filename = "flashinfer_jit_cache-0.6.3+cu130-cp39-abi3-manylinux_2_28_aarch64.whl"
url = "https://github.com/flashinfer-ai/flashinfer/releases/download/v0.6.3/flashinfer_jit_cache-0.6.3+cu130-cp39-abi3-manylinux_2_28_aarch64.whl"
sha256 = "458fcf5a854334062503ce28bd6521c16029d2248246532421e824e8273b8a81"

[package.metadata.flashinfer_rs.pinned_wheels.apache_tvm_ffi.cu130.x86_64]
filename = "apache_tvm_ffi-0.1.3-cp310-cp310-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl"
url = "https://files.pythonhosted.org/packages/49/97/ffe70c4679aebef0c1e32eec3970dc7e35113995d318aeb8c2ef0e4a3eb9/apache_tvm_ffi-0.1.3-cp310-cp310-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl"
sha256 = "48ad3df2224f1b0943344895c6cba2f3f0a53bc67ddafdd3e9d7a34f56100aa9"

[package.metadata.flashinfer_rs.pinned_wheels.apache_tvm_ffi.cu130.aarch64]
filename = "apache_tvm_ffi-0.1.3-cp310-cp310-manylinux_2_24_aarch64.manylinux_2_28_aarch64.whl"
url = "https://files.pythonhosted.org/packages/87/9c/68e30812874e60b141b99202dd3c4e4de964a7cb62cf6455de170b3a5111/apache_tvm_ffi-0.1.3-cp310-cp310-manylinux_2_24_aarch64.manylinux_2_28_aarch64.whl"
sha256 = "ff65bf8a96dbbd2725937ff1502e52571e7a90d81d355a21a303328dd06449cc"

# Apache TVM-FFI wheels are CUDA-independent; duplicated across CUDA keys for
# uniform matrix selection logic.
[package.metadata.flashinfer_rs.pinned_wheels.apache_tvm_ffi.cu131.x86_64]
filename = "apache_tvm_ffi-0.1.3-cp310-cp310-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl"
url = "https://files.pythonhosted.org/packages/49/97/ffe70c4679aebef0c1e32eec3970dc7e35113995d318aeb8c2ef0e4a3eb9/apache_tvm_ffi-0.1.3-cp310-cp310-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl"
sha256 = "48ad3df2224f1b0943344895c6cba2f3f0a53bc67ddafdd3e9d7a34f56100aa9"

[package.metadata.flashinfer_rs.pinned_wheels.apache_tvm_ffi.cu131.aarch64]
filename = "apache_tvm_ffi-0.1.3-cp310-cp310-manylinux_2_24_aarch64.manylinux_2_28_aarch64.whl"
url = "https://files.pythonhosted.org/packages/87/9c/68e30812874e60b141b99202dd3c4e4de964a7cb62cf6455de170b3a5111/apache_tvm_ffi-0.1.3-cp310-cp310-manylinux_2_24_aarch64.manylinux_2_28_aarch64.whl"
sha256 = "ff65bf8a96dbbd2725937ff1502e52571e7a90d81d355a21a303328dd06449cc"

[features]
default = []
cudarc = ["dep:cudarc"]

[dependencies]
cudarc = { version = "0.19", optional = true, features = [
  "cuda-version-from-build-system",
  "driver",
  "std",
  "f8",
  "f16",
] }
fs2 = "0.4.3"
libc = "0.2.170"
libloading = "0.8.6"
sha2 = "0.10.8"
thiserror = "2.0.12"
ureq = { version = "2.12.1", default-features = true }
zip = { version = "2.2.3", default-features = false, features = ["deflate"] }

[build-dependencies]
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.8.20"

[dev-dependencies]
half = "2.4.1"
tempfile = "3.17.1"
